# wgt

./: .flake8  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: python-publish.yml  python-test.yml
tests/: conftest.py  test_wg.py
wg/: __init__.py  wg.py
wgt/: wgt.py
